setup/templates/ingress/02-service.yaml
# Service for Ingress-Traefik
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 80
    - protocol: TCP
      name: websecure
      port: 443
      targetPort: 443
    - protocol: TCP
      name: admin
      port: 8080
  selector:
    app: traefik
  type: LoadBalancer
