setup/templates/ingress/05-global-ingress.yml
# global https redirect
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: global-redirect-http
spec:
  redirectScheme:
    scheme: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-allredirect
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: redirect-service
          port: 80
      middlewares:
        - name: global-redirect-http
